--- a/avito_parser_django/avito/Makefile
+++ b/avito_parser_django/avito/Makefile
@@ -13,3 +13,25 @@ makemigrations:
 
 migrate:
 	python avito/manage.py migrate
+
+cd %ProgramFiles%\PostgreSQL\14\bin\
+psql.exe -h 127.0.0.1 -U postgres -W
+CREATE DATABASE severcart WITH ENCODING='UTF8' OWNER=postgres CONNECTION LIMIT=-1 template=template0;
+
+# settings.py
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.mysql',
+        'OPTIONS': {
+            'read_default_file': '/path/to/my.cnf',
+        },
+    }
+}
+
+
+# my.cnf
+[client]
+database = severcart #NAME
+user = postgres #USER
+password = postgres #PASSWORD
+default-character-set = utf8
